# ugsys-shared-libs

./: .envrc  .gitignore  devbox.json  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.kiro/steering/: ai-guidelines.md  enterprise-patterns.md  goals.md  repository-pattern.md  security.md
auth-client/: pyproject.toml
auth-client/src/: token_validator.py
auth-client/tests/: test_token_validator.py
auth-client/ugsys_auth_client/: __init__.py  auth_middleware.py  models.py  service_auth.py  token_validator.py
event-lib/: pyproject.toml
event-lib/src/: __init__.py  event_schemas.py  publisher.py
event-lib/tests/: test_publisher.py
logging-lib/: pyproject.toml
logging-lib/src/: __init__.py  correlation.py  structured_logger.py
logging-lib/tests/: test_correlation.py
scripts/: install-hooks.sh
scripts/hooks/: pre-commit  pre-push
testing-lib/: pyproject.toml
testing-lib/src/: __init__.py  factories.py  fixtures.py  mocks.py
testing-lib/tests/: test_factories.py
