[project]
name = "ugsys-shared-libs"
version = "0.1.0"
description = "Shared Python libraries for ugsys microservices"
readme = "README.md"
requires-python = ">=3.13"
# Aggregate all package deps here so `uv sync --extra dev` works from root
dependencies = [
    # auth-client
    "fastapi>=0.111.0",
    "pyjwt>=2.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    # logging-lib
    "structlog>=24.0.0",
    "starlette>=0.37.0",
    # event-lib
    "boto3>=1.34.0",
    # testing-lib
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto>=5.0.0",
    "faker>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "moto[events]>=5.0.0",
    "bandit>=1.7.0",
    "hatchling>=1.24.0",
    "twine>=5.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
