[project]
name = "ugsys-testing-lib"
version = "0.1.0"
description = "Shared pytest fixtures, mocks, and factories for ugsys services"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto>=5.0.0",
    "httpx>=0.27.0",
    "faker>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyjwt>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
